[gd_scene load_steps=103 format=3 uid="uid://d4ynuqtttcu4"]

[ext_resource type="Script" path="res://boss_room.gd" id="1_77u4j"]
[ext_resource type="Texture2D" uid="uid://ds8nm5l5wgocy" path="res://assets/bossroom(1).png" id="1_npa43"]
[ext_resource type="Texture2D" uid="uid://dxd05my8vhqoy" path="res://assets/genericBG.png" id="2_kb3lv"]
[ext_resource type="Script" path="res://scripts/boss.gd" id="2_rmbv6"]
[ext_resource type="Texture2D" uid="uid://d2tdewxcwomao" path="res://assets/sprite_08.png" id="3_tmmbn"]
[ext_resource type="Texture2D" uid="uid://bfmg2yhcxx7u5" path="res://assets/sprite_09.png" id="4_qeies"]
[ext_resource type="Texture2D" uid="uid://our2inqw6sb3" path="res://assets/sprite_10.png" id="5_8xnvd"]
[ext_resource type="Texture2D" uid="uid://dvwv6ya4oyltu" path="res://assets/sprite_11.png" id="6_dpr31"]
[ext_resource type="Texture2D" uid="uid://c6q7vui7ew2wf" path="res://assets/sprite_12.png" id="7_iur8a"]
[ext_resource type="Texture2D" uid="uid://coh5rk5ymo2nl" path="res://assets/sprite_13.png" id="8_7kmta"]
[ext_resource type="Texture2D" uid="uid://j72mum4xeogc" path="res://assets/sprite_14.png" id="9_p1goe"]
[ext_resource type="Texture2D" uid="uid://c0mhylrqf1ssr" path="res://assets/sprite_15.png" id="10_ybj2s"]
[ext_resource type="Texture2D" uid="uid://tll3yt0rjur7" path="res://assets/sprite_00.png" id="11_tnyid"]
[ext_resource type="Texture2D" uid="uid://dgvvu6hj3mx5e" path="res://assets/sprite_01.png" id="12_5qud2"]
[ext_resource type="Texture2D" uid="uid://cyxkeewc8xdpf" path="res://assets/sprite_02.png" id="13_68vle"]
[ext_resource type="Texture2D" uid="uid://sqlis7qncr5s" path="res://assets/sprite_03.png" id="14_chxi2"]
[ext_resource type="Texture2D" uid="uid://btu8ly7t46is0" path="res://assets/sprite_04.png" id="15_i1eo4"]
[ext_resource type="Texture2D" uid="uid://cn5yoff7ahwwd" path="res://assets/sprite_05.png" id="16_7nxot"]
[ext_resource type="Texture2D" uid="uid://cfp8dkpcehoht" path="res://assets/sprite_06.png" id="17_0syan"]
[ext_resource type="Texture2D" uid="uid://bod6oyigs8cw8" path="res://assets/sprite_07.png" id="18_ktlai"]
[ext_resource type="Script" path="res://scripts/boss_script.gd" id="19_3ksxp"]
[ext_resource type="Texture2D" uid="uid://j3niuwwymm7t" path="res://assets/diags.png" id="20_dm3w8"]
[ext_resource type="FontFile" uid="uid://4lhe6j1fp84n" path="res://assets/8-bit-hud.ttf" id="21_qcr8v"]
[ext_resource type="Script" path="res://scripts/boss_coll.gd" id="22_je6e6"]
[ext_resource type="Script" path="res://scripts/prota_script.gd" id="23_mvfmm"]
[ext_resource type="Texture2D" uid="uid://bpuprl35cxoq6" path="res://assets/sheetOfProta.png" id="24_ar0mp"]
[ext_resource type="Texture2D" uid="uid://hdlntpi6m5m0" path="res://assets/xc.png" id="25_eq3b5"]
[ext_resource type="Texture2D" uid="uid://bm3ilvehoppgi" path="res://assets/gogogooo.png" id="25_i5ikw"]
[ext_resource type="Texture2D" uid="uid://ckrq5wq3a8mk1" path="res://assets/statua(1).png" id="28_e683d"]
[ext_resource type="Texture2D" uid="uid://dl18b1iuw5h5e" path="res://assets/misc.png" id="29_hn53c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_14bie"]
atlas = ExtResource("29_hn53c")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_0vjds"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_14bie")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_00r6f"]
atlas = ExtResource("3_tmmbn")
region = Rect2(0, 0, 1200, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_tml22"]
atlas = ExtResource("4_qeies")
region = Rect2(0, 0, 1200, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gcyy"]
atlas = ExtResource("5_8xnvd")
region = Rect2(0, 0, 1200, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_tp6se"]
atlas = ExtResource("6_dpr31")
region = Rect2(0, 0, 1200, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_76650"]
atlas = ExtResource("7_iur8a")
region = Rect2(0, 0, 1200, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0joe"]
atlas = ExtResource("8_7kmta")
region = Rect2(0, 0, 1200, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac1wl"]
atlas = ExtResource("9_p1goe")
region = Rect2(0, 0, 1200, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lsu3"]
atlas = ExtResource("10_ybj2s")
region = Rect2(0, 0, 1200, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h5vs"]
atlas = ExtResource("11_tnyid")
region = Rect2(0, 0, 1200, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6ikp"]
atlas = ExtResource("12_5qud2")
region = Rect2(0, 0, 1200, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_es5dl"]
atlas = ExtResource("13_68vle")
region = Rect2(0, 0, 1200, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsipi"]
atlas = ExtResource("11_tnyid")
region = Rect2(0, 0, 1200, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqib3"]
atlas = ExtResource("14_chxi2")
region = Rect2(0, 0, 1200, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc2hq"]
atlas = ExtResource("15_i1eo4")
region = Rect2(0, 0, 1200, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0i8i"]
atlas = ExtResource("16_7nxot")
region = Rect2(0, 0, 1200, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqdqg"]
atlas = ExtResource("17_0syan")
region = Rect2(0, 0, 1200, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_88na6"]
atlas = ExtResource("18_ktlai")
region = Rect2(0, 0, 1200, 1200)

[sub_resource type="SpriteFrames" id="SpriteFrames_j31vr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_00r6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tml22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gcyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp6se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76650")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0joe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac1wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lsu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac1wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lsu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac1wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lsu3")
}],
"loop": true,
"name": &"final",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h5vs")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6ikp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_es5dl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsipi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqib3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsipi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsipi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqib3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsipi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqib3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqib3")
}],
"loop": true,
"name": &"talk1",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc2hq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0i8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqdqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88na6")
}],
"loop": true,
"name": &"talk2",
"speed": 5.0
}]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ntmal"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_wm2dt"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_lje6m"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_74lud"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_iarcl"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_dptvt"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_awecn"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_h00y4"]
color = Color(0, 0, 0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ycj00"]
size = Vector2(97, 71)

[sub_resource type="CircleShape2D" id="CircleShape2D_ws37s"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_p7t4r"]
load_path = "res://.godot/imported/sheetOfProta.png-4ffac5f04717b1f223e74e135e9d4eed.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_2sb8l"]
atlas = SubResource("CompressedTexture2D_p7t4r")
region = Rect2(9000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wbsc"]
atlas = SubResource("CompressedTexture2D_p7t4r")
region = Rect2(10000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_4i32j"]
atlas = ExtResource("24_ar0mp")
region = Rect2(5000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_uikvq"]
atlas = ExtResource("24_ar0mp")
region = Rect2(7000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmfoh"]
atlas = ExtResource("24_ar0mp")
region = Rect2(8000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5jgw"]
atlas = SubResource("CompressedTexture2D_p7t4r")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk1tx"]
atlas = SubResource("CompressedTexture2D_p7t4r")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fyap"]
atlas = SubResource("CompressedTexture2D_p7t4r")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg4tw"]
atlas = SubResource("CompressedTexture2D_p7t4r")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_0soy6"]
atlas = SubResource("CompressedTexture2D_p7t4r")
region = Rect2(4000, 0, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_eqkvq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sb8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wbsc")
}],
"loop": true,
"name": &"die",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i32j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i32j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i32j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i32j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i32j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i32j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i32j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i32j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i32j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uikvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmfoh")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5jgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk1tx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fyap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg4tw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0soy6")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lhux0"]
size = Vector2(33, 72)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8pdnk"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_r4reb"]
color = Color(0, 0, 0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_207lq"]
size = Vector2(21, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fb7bn"]
atlas = ExtResource("25_i5ikw")
region = Rect2(0, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlvsj"]
atlas = ExtResource("25_i5ikw")
region = Rect2(400, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq08r"]
atlas = ExtResource("25_i5ikw")
region = Rect2(800, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_cb6lj"]
atlas = ExtResource("25_i5ikw")
region = Rect2(1200, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_lojps"]
atlas = ExtResource("25_i5ikw")
region = Rect2(1600, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pwcf"]
atlas = ExtResource("25_i5ikw")
region = Rect2(2000, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_n02f4"]
atlas = ExtResource("25_i5ikw")
region = Rect2(2400, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_kc8yl"]
atlas = ExtResource("25_i5ikw")
region = Rect2(2800, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nscw"]
atlas = ExtResource("25_i5ikw")
region = Rect2(3200, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ird63"]
atlas = ExtResource("25_i5ikw")
region = Rect2(3600, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_at6vq"]
atlas = ExtResource("25_i5ikw")
region = Rect2(4000, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fnw5"]
atlas = ExtResource("25_i5ikw")
region = Rect2(4400, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pppf"]
atlas = ExtResource("25_i5ikw")
region = Rect2(4800, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsb7c"]
atlas = ExtResource("25_i5ikw")
region = Rect2(5200, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k4iw"]
atlas = ExtResource("25_i5ikw")
region = Rect2(5600, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqhfk"]
atlas = ExtResource("25_i5ikw")
region = Rect2(6000, 0, 400, 400)

[sub_resource type="SpriteFrames" id="SpriteFrames_agyph"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fb7bn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlvsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq08r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cb6lj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lojps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pwcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n02f4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kc8yl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nscw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ird63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at6vq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fnw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pppf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsb7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k4iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqhfk")
}],
"loop": true,
"name": &"default",
"speed": 16.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g88c1"]
size = Vector2(1124, 170)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cv4j1"]
size = Vector2(353, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yl84t"]
size = Vector2(64, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ahieq"]
size = Vector2(45, 178)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2eih0"]
radius = 8.0
height = 32.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qi65g"]
size = Vector2(102, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dc3eh"]
size = Vector2(26, 42)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cun7n"]
radius = 8.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jw51o"]

[node name="BossRoom" type="Node2D"]
script = ExtResource("1_77u4j")

[node name="GenericBg2" type="Sprite2D" parent="."]
position = Vector2(520, 328.75)
scale = Vector2(4.7, 1.90469)
texture = ExtResource("2_kb3lv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(536, 344)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_npa43")

[node name="misc" type="AnimatedSprite2D" parent="."]
position = Vector2(468, 355)
scale = Vector2(0.084, 0.084)
sprite_frames = SubResource("SpriteFrames_0vjds")

[node name="boss" type="Node2D" parent="."]
process_mode = 3
position = Vector2(376, 208)
script = ExtResource("2_rmbv6")

[node name="bossAnimation" type="AnimatedSprite2D" parent="boss"]
process_mode = 3
position = Vector2(-152, 137)
scale = Vector2(0.0895833, 0.088125)
sprite_frames = SubResource("SpriteFrames_j31vr")
animation = &"talk1"

[node name="bossDialog" type="Panel" parent="boss"]
process_mode = 3
top_level = true
offset_left = 56.0
offset_top = 288.0
offset_right = 147.0
offset_bottom = 321.0
scale = Vector2(1.19297, 1.73969)
theme_override_styles/panel = SubResource("StyleBoxLine_ntmal")
script = ExtResource("19_3ksxp")
metadata/_edit_use_anchors_ = true

[node name="background2" type="Sprite2D" parent="boss/bossDialog"]
position = Vector2(156.752, 64.0919)
scale = Vector2(0.0989128, 0.0557571)
texture = ExtResource("20_dm3w8")

[node name="sharlita" type="Label" parent="boss/bossDialog"]
process_mode = 3
layout_mode = 0
offset_left = 21.0
offset_top = 49.0
offset_right = 283.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("21_qcr8v")
theme_override_font_sizes/font_size = 5
theme_override_styles/normal = SubResource("StyleBoxLine_wm2dt")
text = "hey kid, you’re lucky i’m feeling generous today
take 20 grand, but don’t play me"
metadata/_edit_use_anchors_ = true

[node name="next" type="Button" parent="boss/bossDialog"]
process_mode = 3
layout_mode = 0
offset_left = 244.767
offset_top = 70.7023
offset_right = 277.767
offset_bottom = 86.7023
theme_override_colors/font_hover_pressed_color = Color(0.570476, 7.33994e-07, 1.92523e-07, 1)
theme_override_colors/font_hover_color = Color(0.643137, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.462745, 0.4, 0, 1)
theme_override_colors/font_focus_color = Color(0.462745, 0.4, 0, 1)
theme_override_colors/font_color = Color(0.461609, 0.399966, 3.85046e-07, 1)
theme_override_fonts/font = ExtResource("21_qcr8v")
theme_override_font_sizes/font_size = 5
theme_override_styles/focus = SubResource("StyleBoxLine_lje6m")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxLine_74lud")
theme_override_styles/hover_pressed = SubResource("StyleBoxLine_iarcl")
theme_override_styles/hover = SubResource("StyleBoxLine_dptvt")
theme_override_styles/pressed = SubResource("StyleBoxLine_awecn")
theme_override_styles/normal = SubResource("StyleBoxLine_h00y4")
text = "next"
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="boss"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="boss/Area2D"]
position = Vector2(-159.5, 140)
shape = SubResource("RectangleShape2D_ycj00")
debug_color = Color(0.900967, 0.211568, 0.573656, 0.42)

[node name="Xc" type="Sprite2D" parent="boss/Area2D"]
position = Vector2(-162.75, 89.5)
scale = Vector2(0.0756411, 0.0766667)
texture = ExtResource("25_eq3b5")

[node name="StaticBody2D" type="StaticBody2D" parent="boss"]

[node name="bossColl" type="CollisionShape2D" parent="boss/StaticBody2D"]
position = Vector2(-160, 100)
shape = SubResource("CircleShape2D_ws37s")
script = ExtResource("22_je6e6")

[node name="prota" type="CharacterBody2D" parent="."]
position = Vector2(1064, 176)
script = ExtResource("23_mvfmm")

[node name="protaSprites" type="AnimatedSprite2D" parent="prota"]
position = Vector2(-79, 200)
scale = Vector2(0.094, 0.096)
sprite_frames = SubResource("SpriteFrames_eqkvq")
animation = &"idle"

[node name="protaCOlision" type="CollisionShape2D" parent="prota"]
position = Vector2(-79.5, 204)
shape = SubResource("RectangleShape2D_lhux0")

[node name="Camera2D" type="Camera2D" parent="prota"]
position = Vector2(-64, 200)
zoom = Vector2(3, 3)

[node name="interface" type="Label" parent="prota/Camera2D"]
offset_left = 120.0
offset_top = -104.0
offset_right = 183.0
offset_bottom = -72.0
theme_override_fonts/font = ExtResource("21_qcr8v")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxLine_8pdnk")
text = "amount:

"

[node name="guita" type="Label" parent="prota/Camera2D/interface"]
layout_mode = 0
offset_left = -1.0
offset_top = 19.0
offset_right = 66.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0.822024, 0.605885, 7.70092e-07, 1)
theme_override_fonts/font = ExtResource("21_qcr8v")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxLine_r4reb")
text = "$
"
horizontal_alignment = 2

[node name="door" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="door"]
position = Vector2(1002.5, 376)
shape = SubResource("RectangleShape2D_207lq")
debug_color = Color(0.531304, 0.688837, 0.0101814, 0.42)

[node name="go" type="AnimatedSprite2D" parent="."]
position = Vector2(984, 312)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_agyph")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(524, 208)
shape = SubResource("RectangleShape2D_g88c1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(608.5, 296)
shape = SubResource("RectangleShape2D_cv4j1")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(216, 287.5)
shape = SubResource("RectangleShape2D_yl84t")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(538, 520)
shape = SubResource("RectangleShape2D_g88c1")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(41.5, 360)
shape = SubResource("RectangleShape2D_ahieq")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1032, 376)
shape = SubResource("RectangleShape2D_ahieq")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(520, 304)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_2eih0")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(632, 304)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_2eih0")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(712, 304)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_2eih0")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(984, 304)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_2eih0")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(968, 288)
shape = SubResource("RectangleShape2D_qi65g")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(125, 276)
shape = SubResource("RectangleShape2D_dc3eh")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(312, 276)
shape = SubResource("RectangleShape2D_dc3eh")

[node name="CollisionShape2D14" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(484, 306)
shape = SubResource("CapsuleShape2D_cun7n")

[node name="Statua(1)" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(355, 411)
scale = Vector2(0.131081, 0.112667)
texture = ExtResource("28_e683d")

[node name="CollisionShape2D15" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(466, 304)
shape = SubResource("CircleShape2D_jw51o")

[node name="Statua(1)" type="Sprite2D" parent="."]
position = Vector2(70, 409)
scale = Vector2(-0.131, 0.113)
texture = ExtResource("28_e683d")

[connection signal="pressed" from="boss/bossDialog/next" to="boss/bossDialog" method="_on_next_pressed"]
[connection signal="body_entered" from="boss/Area2D" to="boss" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="boss/Area2D" to="boss" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="door" to="." method="_on_door_body_entered"]
[connection signal="body_exited" from="door" to="." method="_on_door_body_exited"]
